--- a/templates/board.html
+++ b/templates/board.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ board.name }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+    <title>πchan - /{{ board.id }}</title>
 </head>
-<body>
-    <div class="container">
-        <h1>Board: {{ board.name }}</h1>
-        <p>ID: {{ board.id }}</p>
-        <p>Description: {{ board.description }}</p>
-        <a href="{{ url_for('Boards.Board', id=board.id) }}">Back to Board</a>
-    </div>
+<body class="chan-bg vh-100 d-flex flex-column align-items-center">
+    <nav class="chan-nav d-flex w-100 border-bottom py-1" style="height: fit-content;">
+        <ul class="d-flex gap-2 w-100 px-1 list-unstyled m-0" style="height: fit-content; width: max-content;">
+            {% for board in boards %}
+                <a href="{{ url_for('Boards.Board', id=board.id) }}" title="{{ board.name }}" style="font-size: 13px; font-family: 'Courier New'; height: fit-content;">/{{ board.id }}</a>
+            {% endfor %}
+        </ul>
+        <a href="{{ url_for('Index.home') }}" class="px-2" style="font-size: 13px; font-family: 'Courier New'; height: fit-content;">Home</a>
+    </nav>
+    <main class="d-flex w-100 h-100 flex-column align-items-center">
+        <div class="chan-title d-flex fw-bold align-items-center align-content-center justify-content-start gap-3 w-100 px-3 bg-dark" style="margin-bottom: 25px; background: linear-gradient(to right, #1827209c, transparent);">
+            <p class="text-success m-0 " style="font-size: 65px; height: fit-content;">/{{ board.id }}</p>
+            <p class="m-0" style="height: fit-content;">-</p>
+            <p class="m-0" style="height: fit-content;">{{ board.name }}</p>
+        </div>
+
+        <h2 class="fst-italic text-white w-100 m-0" style="font-size: 15px; font-family: 'Courier New', Courier, monospace;">Threads:</h2>
+        <section class="d-flex w-100 h-100 border py-1 px-2 gap-3" id="threads">
+            
+        </section>
+
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
