--- a/static/css/board.css
+++ b/static/css/board.css
@@ -87,7 +87,7 @@
 
 .chan-text-content{
     font-size: 0.8rem;
-    min-height: 50px;
+    min-height: 3.125rem;
     margin: 0;
     padding: 0 0 0 2px;
 }
