--- a/templates/board.html
+++ b/templates/board.html
@@ -18,7 +18,7 @@
         </ul>
         <a href="{{ url_for('Index.home') }}" class="px-2" style="font-size: 0.8rem; font-family: 'Courier New'; height: fit-content;">Home</a>
     </nav>
-    <main class="d-flex w-100 h-100 flex-column align-items-center">
+    <main class="d-flex w-100 flex-column align-items-center" style="height: fit-content;">
         <div class="chan-title d-flex border-bottom border-black fw-bold align-items-center align-content-center justify-content-start gap-3 w-100 px-3 bg-dark" style="background: linear-gradient(to right, #1827209c, transparent);">
             <p class="text-success m-0">/{{ board.id }}</p>
             <p class="m-0" style="height: fit-content; font-size: 2.5rem;">-</p>
@@ -36,17 +36,22 @@
                     <button type="button" class="btn-close"  data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <form class="d-flex flex-column gap-2" action="" method="post">
+                        <form class="d-flex flex-column gap-2">
                             <input class="w-100" type="text" placeholder="Title" id="title">
                             <textarea class="w-100" placeholder="Content" id="content"></textarea>
-                            <input type="file" name="" accept=".jpg,.png" id="" >
+
+                            
+                                <input type="file" name="image" accept=".jpg,.png" id="image" >
+                                <input type="hidden" name="new_thread_id" value="" id="new_thread_id">
+                                <input type="submit" value="" id="submit_image" class="visually-hidden">
+                           
 
                             <input type="hidden" id="board_id" value="{{ board.id }}">
                         </form>
                     </div>
                     <div class="modal-footer" style="border-color: #5e5e5e;">
-                    <button type="button" class="btn btn-secondary chan-button-close w-100" style="max-width: 80px;" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary chan-button w-100" style="max-width: 150px;" onclick="postThread()">Post thread</button>
+                        <button type="button" class="btn btn-secondary chan-button-close w-100" style="max-width: 80px;" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary chan-button w-100" style="max-width: 150px;" onclick="postThread()">Post thread</button>
                     </div>
                 </div>
             </div>
@@ -78,7 +83,7 @@
         <hr class="border-white w-100 my-0" style="margin-bottom: 1rem !important;">
   
         <!-- Rendering Threads and Replies -->
-        <section class="d-flex flex-column align-items-start w-100 h-100 px-2 gap-3" style="padding-bottom: 1rem; height: fit-content;" id="threads">
+        <section class="d-flex flex-column align-items-start w-100 px-2 gap-3" style="padding-bottom: 1rem; height: fit-content;" id="threads">
             
             {% macro count_replies(replies, c=namespace(value=0)) %}
                 
@@ -97,19 +102,19 @@
 
                 {% for reply in replies %}
                 
-                    {% set count.value = count.value + 1 %}
+                    
 
-                    {% if count.value <= 5 %}
-                        
+                    {% if count.value < 5 %}
+                        {% set count.value = count.value + 1 %}
                         <div id="r{{ reply.id }}" class="chan-thread-info d-flex flex-column" style="min-width: 300px; margin-left: {{ 20 * level }}px; width: fit-content;">
-                            <div class="d-flex align-items-center gap-1" style="height: fit-content !important;">
+                            <div class="d-flex gap-1">
                                 <p class="m-0" style="font-size: 11px; color: rgba(255, 255, 255, 0.700);">User: {{ reply.user_token }}</p>
                                 {% if reply.user_token == thread.user_token %}
                                     <p class="text-info m-0" style="font-size: 0.7rem;">(OP)</p>
                                 {% endif %}
-                                <hr class="m-0 h-100" style="width: 1px; border-left: solid 1px;">
+                                <hr class="m-0" style="width: 1px; border-left: solid 1px;">
                                 <p class="m-0" style="font-size: 11px; color: rgba(255, 255, 255, 0.700);">Reply No.{{ reply.id }}</p>
-                                <hr class="m-0 h-100" style="width: 1px; border-left: solid 1px;">
+                                <hr class="m-0" style="width: 1px; border-left: solid 1px;">
                                 <a
                                     onclick="highlightPost({{ 'r' ~ (reply.reply.id | string) if reply.reply else 't' ~ (reply.thread.id | string) }})"
                                     href="#{{ 'r' ~ (reply.reply.id | string) if reply.reply else 't' ~ (reply.thread.id | string) }}"
@@ -118,7 +123,7 @@
                                 </a>
                             </div>
 
-                            <p style="font-size: 13px; color: rgba(255, 255, 255, 0.900); min-height: 35px;">{{ reply.content }}</p>
+                            <p class="m-0" style="font-size: 13px; color: rgba(255, 255, 255, 0.900); min-height: 2.5rem;">{{ reply.content }}</p>
 
                             <div class="d-flex justify-content-between">
                                 <div class="d-flex gap-1">
@@ -154,7 +159,7 @@
                         {% endif %}
                     {% endif %}
                     
-                    {% if count.value > 5 and not rendered.flag %}
+                    {% if count.value == 5 and not rendered.flag %}
                         {% set rendered.flag = True %}
                         <a href="{{ url_for('Threads.Thread', id=thread.id) }}" style="margin-left: {{ 20 * level }}px;">See all {{ count_replies(thread.replies) }} replies</a>  
                     {% endif %}      
@@ -165,11 +170,20 @@
 
 
             {% for thread in board.threads %}
-                <div class="d-flex flex-column gap-1">
-                    <!-- Thread -->
+            <div class="d-flex align-items-start gap-1">
+                <!-- Thread -->
+                <div class="d-flex flex-column justify-content-center" style="width: 30%;">
+                    <img class="rounded-1" style="width: 100%; height: auto; max-height: 400px;" src="{{ url_for('Images.Image', id=thread.image.id) }}" alt="">
+                    <div class="d-flex gap-1">
+                        <p style="font-size: 0.7rem; color: #696969;" class="m-0">File: </p>
+                        <a style="font-size: 0.7rem;" class="m-0" href="{{ url_for('Images.Image', id=thread.image.id) }}">{{ thread.image.name }}</a>
+                    </div>
+                </div>
+                <div class="d-flex flex-column gap-1 w-100">
+                    
                     <div id="t{{ thread.id }}" class="chan-thread-info border-info-subtle" style="min-width: 300px; width: fit-content;">
                         <div class="d-flex gap-2">
-                            <a class="chan-thread-title m-0 text-decoration-none fst-italic" href="{{ url_for('Threads.Thread', id=thread.id) }}" style="font-weight: 500;">{{ thread.title }}</a>
+                            <a class="chan-thread-title m-0 text-decoration-none fst-italic" href="{{ url_for('Threads.Thread', id=thread.id) }}" style="font-weight: 500; text;">{{ thread.title }}</a>
                             <div class="d-flex flex-column justify-content-around">
                                 <p class="m-0" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">User: {{ thread.user_token }}</p>
                                 <p class="m-0" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">Thread No.{{ thread.id }}</p>      
@@ -201,10 +215,8 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- Render the replies for the thread, starting with level 2 for nesting -->
-                    {{ render_replies(thread.replies, 2, thread) }}
-                </div>
+                    {{ render_replies(thread.replies, 2, thread) }}    
+                </div> 
             {% endfor %}
 
 
