--- a/templates/thread.html
+++ b/templates/thread.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/board.css') }}">
     <title>πchan - /{{ thread.board.id }}</title>
 </head>
-<body class="chan-bg vh-100 d-flex flex-column align-items-center">
+<body class="chan-bg vh-100 d-flex flex-column align-items-center overflow-hidden">
     <nav class="chan-nav d-flex w-100 border-bottom py-1" style="height: fit-content;">
         <ul class="d-flex gap-2 w-100 px-2 list-unstyled m-0" style="height: fit-content; width: max-content;">
             {% for board in boards %}
@@ -18,7 +18,7 @@
         </ul>
         <a href="{{ url_for('Index.home') }}" class="px-2" style="font-size: 0.8rem; font-family: 'Courier New'; height: fit-content;">Home</a>
     </nav>
-    <main class="d-flex w-100 h-100 flex-column align-items-center">
+    <main class="d-flex w-100 flex-column align-items-center" style="height: fit-content;">
         <div class="chan-title d-flex border-bottom border-black fw-bold align-items-center align-content-center justify-content-start gap-3 w-100 px-3 bg-dark" style="background: linear-gradient(to right, #1827209c, transparent); margin-bottom: 1rem;">
             <p class="text-success m-0">/{{ thread.board.id }}</p>
             <p class="m-0" style="height: fit-content; font-size: 2.5rem;">-</p>
@@ -56,24 +56,25 @@
                 <a href="{{ url_for('Boards.Board', id=thread.board.id) }}" title="{{ thread.board.name }}" style="font-size: 0.8rem; font-family: 'Courier New'; height: fit-content;">Back to /{{ thread.board.id }}</a>
             </div>
 
-        <hr class="border-white w-100 my-0" style="margin-bottom: 1rem !important;">
+        <hr class="border-white w-100 my-0" style="margin-bottom: 1.1rem !important;">
   
         <!-- Rendering Threads and Replies -->
-        <section class="d-flex flex-column align-items-start w-100 px-2 gap-3" style="padding-bottom: 1rem; height: fit-content;" id="threads">
-
+        
+        <section class="d-flex flex-column overflow-scroll align-items-start w-100 px-2 gap-3" style="padding-bottom: 1rem; height: fit-content;" id="threads">
+            
             {% macro render_replies(replies, level, thread) %}
 
                 {% for reply in replies %}
                         
                     <div id="r{{ reply.id }}" class="chan-thread-info d-flex flex-column" style="min-width: 300px; margin-left: {{ 20 * level }}px; width: fit-content;">
-                        <div class="d-flex align-items-center gap-1" style="height: fit-content !important;">
-                            <p class="m-0" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">User: {{ reply.user_token }}</p>
+                        <div class="d-flex gap-1">
+                            <p class="m-0" style="font-size: 11px; color: rgba(255, 255, 255, 0.700);">User: {{ reply.user_token }}</p>
                             {% if reply.user_token == thread.user_token %}
                                 <p class="text-info m-0" style="font-size: 0.7rem;">(OP)</p>
                             {% endif %}
-                            <hr class="m-0 h-100" style="width: 1px; border-left: solid 1px;">
+                            <hr class="m-0" style="width: 1px; border-left: solid 1px;">
                             <p class="m-0" style="font-size: 11px; color: rgba(255, 255, 255, 0.700);">Reply No.{{ reply.id }}</p>
-                            <hr class="m-0 h-100" style="width: 1px; border-left: solid 1px;">
+                            <hr class="m-0" style="width: 1px; border-left: solid 1px;">
                             <a
                                 onclick="highlightPost({{ 'r' ~ (reply.reply.id | string) if reply.reply else 't' ~ (reply.thread.id | string) }})"
                                 href="#{{ 'r' ~ (reply.reply.id | string) if reply.reply else 't' ~ (reply.thread.id | string) }}"
@@ -82,7 +83,7 @@
                             </a>
                         </div>
 
-                        <p style="font-size: 13px; color: rgba(255, 255, 255, 0.900); min-height: 35px;">{{ reply.content }}</p>
+                        <p class="m-0" style="font-size: 13px; color: rgba(255, 255, 255, 0.900); min-height: 2.5rem;">{{ reply.content }}</p>
 
                         <div class="d-flex justify-content-between">
                             <div class="d-flex gap-1">
@@ -124,45 +125,58 @@
 
 
             
-            <div class="d-flex flex-column gap-1">
+            <div class="d-flex align-items-start gap-1">
                 <!-- Thread -->
-                <div id="t{{ thread.id }}" class="chan-thread-info border-info-subtle" style="min-width: 300px; width: fit-content;">
-                    <div class="d-flex gap-2">
-                        <p class="chan-thread-title m-0 text-decoration-none fst-italic" style="font-weight: 500;">{{ thread.title }}</p>
-                        <div class="d-flex flex-column justify-content-around">
-                            <p class="m-0" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">User: {{ thread.user_token }}</p>
-                            <p class="m-0" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">Thread No.{{ thread.id }}</p>      
-                        </div>
-                    </div>
-
-                    <p class="chan-text-content">{{ thread.content }}</p>
-
-                    <div class="d-flex justify-content-between">
-                        <div class="d-flex gap-1">
-                            <p class="m-0" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">
-                                {{ '%02d' | format(thread.date.day) }}/{{ '%02d' | format(thread.date.month) }}/{{ thread.date.year }}
-                            </p>
-                            <hr class="m-0 h-100" style="width: 1px; border-left: solid 1px;">
-                            <p class="m-0" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">{{ thread.time }}</p>
-                            <p class="m-0" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">UTC</p>    
-                        </div>
-                        <div class="d-flex justify-content-center gap-1">
-                            <button class="d-flex p-0 border-0 bg-transparent text-white" style="height: fit-content;">
-                                <i class="fa-solid fa-caret-up  px-1" style="font-size: 0.9rem; padding-top: 0.15rem; background-color: rgba(0, 153, 255, 0.2); border-radius: 3px; height: fit-content;"></i>
-                            </button>
-                            <button class="d-flex p-0 border-0 bg-transparent text-white" style="height: fit-content;">
-                            <i class="fa-solid fa-caret-down px-1" style="font-size: 0.9rem; padding-bottom: 0.15rem; background-color: rgba(255, 78, 78, 0.2); border-radius: 3px; height: fit-content;"></i>
-                            </button>
-                            <button class="d-flex gap-1 align-items-center text-white p-0 border-0 px-1" style="background-color: rgba(0, 255, 89, 0.1); border-radius: 3px;" onclick="replyModal('t{{ thread.id }}')" type="button" data-bs-toggle="modal" data-bs-target="#newReply">
-                                <i style="font-size: 0.7rem;" class="fa-solid fa-reply"></i>
-                                <p style="font-size: 0.7rem;" class="m-0">Reply</p>   
-                            </button>
-                        </div>
+                <div class="d-flex flex-column justify-content-center" style="width: 30%;">
+                    <img class="rounded-1" style="width: 100%; height: auto; max-height: 400px;" src="{{ url_for('Images.Image', id=thread.image.id) }}" alt="">
+                    <div class="d-flex gap-1">
+                        <p style="font-size: 0.7rem; color: #696969;" class="m-0">File: </p>
+                        <a style="font-size: 0.7rem;" class="m-0" href="{{ url_for('Images.Image', id=thread.image.id) }}">{{ thread.image.name }}</a>
                     </div>
                 </div>
+                <div class="d-flex flex-column gap-1 w-100">
+                    
+                    <div id="t{{ thread.id }}" class="chan-thread-info border-info-subtle" style="min-width: 300px; width: fit-content;">
+                        <div class="d-flex gap-2">
+                            <a class="chan-thread-title m-0 text-decoration-none fst-italic" style="font-weight: 500;">{{ thread.title }}</a>
+                            <div class="d-flex flex-column justify-content-around">
+                                <p class="m-0" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">User: {{ thread.user_token }}</p>
+                                <p class="m-0" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">Thread No.{{ thread.id }}</p>      
+                            </div>
+                        </div>
+
+                        <p class="chan-text-content">{{ thread.content }}</p>
+
+                        <div class="d-flex justify-content-between">
+                            <div class="d-flex gap-1">
+                                <p class="m-0" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">
+                                    {{ '%02d' | format(thread.date.day) }}/{{ '%02d' | format(thread.date.month) }}/{{ thread.date.year }}
+                                </p>
+                                <hr class="m-0 h-100" style="width: 1px; border-left: solid 1px;">
+                                <p class="m-0" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">{{ thread.time }}</p>
+                                <p class="m-0" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">UTC</p>    
+                            </div>
+                            <div class="d-flex justify-content-center gap-1">
+                                <button class="d-flex p-0 border-0 bg-transparent text-white" style="height: fit-content;">
+                                    <i class="fa-solid fa-caret-up  px-1" style="font-size: 0.9rem; padding-top: 0.15rem; background-color: rgba(0, 153, 255, 0.2); border-radius: 3px; height: fit-content;"></i>
+                                </button>
+                                <button class="d-flex p-0 border-0 bg-transparent text-white" style="height: fit-content;">
+                                <i class="fa-solid fa-caret-down px-1" style="font-size: 0.9rem; padding-bottom: 0.15rem; background-color: rgba(255, 78, 78, 0.2); border-radius: 3px; height: fit-content;"></i>
+                                </button>
+                                <button class="d-flex gap-1 align-items-center text-white p-0 border-0 px-1" style="background-color: rgba(0, 255, 89, 0.1); border-radius: 3px;" onclick="replyModal('t{{ thread.id }}')" type="button" data-bs-toggle="modal" data-bs-target="#newReply">
+                                    <i style="font-size: 0.7rem;" class="fa-solid fa-reply"></i>
+                                    <p style="font-size: 0.7rem;" class="m-0">Reply</p>   
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    {{ render_replies(thread.replies, 2, thread) }}    
+                </div> 
+                
 
                 <!-- Render the replies for the thread, starting with level 2 for nesting -->
-                {{ render_replies(thread.replies, 2, thread) }}
+                
+                
             </div>
             
 
